Everything works. still horizontal sizing issue on mobile

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -96,7 +96,7 @@ header {
   &.show nav{}  
 }
 .viewer{
-  &.pinned{background: pink;}
+  &.pinned{  will-change: transform;}
 }
 .pinned{}
 @keyframes slideDown {
